antlr_generated/LuaParser.py
# Generated from antlr_generated/Lua.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LuaParser ( Parser ):

    grammarFileName = "Lua.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'='", "'do'", "'end'", "'while'", 
                     "'repeat'", "'until'", "'if'", "'then'", "'elseif'", 
                     "'else'", "'for'", "','", "'in'", "'function'", "'local'", 
                     "'return'", "'break'", "'.'", "':'", "'nil'", "'false'", 
                     "'true'", "'...'", "'('", "')'", "'['", "']'", "'{'", 
                     "'}'", "'+'", "'-'", "'*'", "'/'", "'^'", "'%'", "'..'", 
                     "'<'", "'<='", "'>'", "'>='", "'=='", "'~='", "'and'", 
                     "'or'", "'not'", "'#'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NAME", "INT", "FLOAT", "EXP", "HEX", "NORMALSTRING", 
                      "CHARSTRING", "LONGSTRING", "COMMENT", "LINE_COMMENT", 
                      "WS", "NEWLINE" ]

    RULE_chunk = 0
    RULE_block = 1
    RULE_stat = 2
    RULE_laststat = 3
    RULE_funcname = 4
    RULE_varlist1 = 5
    RULE_namelist = 6
    RULE_explist1 = 7
    RULE_exp = 8
    RULE_var = 9
    RULE_prefixexp = 10
    RULE_functioncall = 11
    RULE_varOrExp = 12
    RULE_nameAndArgs = 13
    RULE_varSuffix = 14
    RULE_args = 15
    RULE_function = 16
    RULE_funcbody = 17
    RULE_funcchunk = 18
    RULE_funcblock = 19
    RULE_parlist1 = 20
    RULE_tableconstructor = 21
    RULE_fieldlist = 22
    RULE_field = 23
    RULE_fieldsep = 24
    RULE_binop = 25
    RULE_unop = 26
    RULE_number = 27
    RULE_string = 28

    ruleNames =  [ "chunk", "block", "stat", "laststat", "funcname", "varlist1", 
                   "namelist", "explist1", "exp", "var", "prefixexp", "functioncall", 
                   "varOrExp", "nameAndArgs", "varSuffix", "args", "function", 
                   "funcbody", "funcchunk", "funcblock", "parlist1", "tableconstructor", 
                   "fieldlist", "field", "fieldsep", "binop", "unop", "number", 
                   "string" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    NAME=48
    INT=49
    FLOAT=50
    EXP=51
    HEX=52
    NORMALSTRING=53
    CHARSTRING=54
    LONGSTRING=55
    COMMENT=56
    LINE_COMMENT=57
    WS=58
    NEWLINE=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ChunkContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.StatContext)
            else:
                return self.getTypedRuleContext(LuaParser.StatContext,i)


        def laststat(self):
            return self.getTypedRuleContext(LuaParser.LaststatContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_chunk

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChunk" ):
                listener.enterChunk(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChunk" ):
                listener.exitChunk(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChunk" ):
                return visitor.visitChunk(self)
            else:
                return visitor.visitChildren(self)




    def chunk(self):

        localctx = LuaParser.ChunkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_chunk)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 281475010367848) != 0):
                self.state = 58
                self.stat()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==1:
                    self.state = 59
                    self.match(LuaParser.T__0)


                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17 or _la==18:
                self.state = 67
                self.laststat()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==1:
                    self.state = 68
                    self.match(LuaParser.T__0)




        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def chunk(self):
            return self.getTypedRuleContext(LuaParser.ChunkContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = LuaParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.chunk()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varlist1(self):
            return self.getTypedRuleContext(LuaParser.Varlist1Context,0)


        def explist1(self):
            return self.getTypedRuleContext(LuaParser.Explist1Context,0)


        def functioncall(self):
            return self.getTypedRuleContext(LuaParser.FunctioncallContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.BlockContext)
            else:
                return self.getTypedRuleContext(LuaParser.BlockContext,i)


        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.ExpContext)
            else:
                return self.getTypedRuleContext(LuaParser.ExpContext,i)


        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)

        def namelist(self):
            return self.getTypedRuleContext(LuaParser.NamelistContext,0)


        def funcname(self):
            return self.getTypedRuleContext(LuaParser.FuncnameContext,0)


        def funcbody(self):
            return self.getTypedRuleContext(LuaParser.FuncbodyContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = LuaParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.varlist1()
                self.state = 76
                self.match(LuaParser.T__1)
                self.state = 77
                self.explist1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.functioncall()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 80
                self.match(LuaParser.T__2)
                self.state = 81
                self.block()
                self.state = 82
                self.match(LuaParser.T__3)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 84
                self.match(LuaParser.T__4)
                self.state = 85
                self.exp()
                self.state = 86
                self.match(LuaParser.T__2)
                self.state = 87
                self.block()
                self.state = 88
                self.match(LuaParser.T__3)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 90
                self.match(LuaParser.T__5)
                self.state = 91
                self.block()
                self.state = 92
                self.match(LuaParser.T__6)
                self.state = 93
                self.exp()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 95
                self.match(LuaParser.T__7)
                self.state = 96
                self.exp()
                self.state = 97
                self.match(LuaParser.T__8)
                self.state = 98
                self.block()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==10:
                    self.state = 99
                    self.match(LuaParser.T__9)
                    self.state = 100
                    self.exp()
                    self.state = 101
                    self.match(LuaParser.T__8)
                    self.state = 102
                    self.block()
                    self.state = 108
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==11:
                    self.state = 109
                    self.match(LuaParser.T__10)
                    self.state = 110
                    self.block()


                self.state = 113
                self.match(LuaParser.T__3)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 115
                self.match(LuaParser.T__11)
                self.state = 116
                self.match(LuaParser.NAME)
                self.state = 117
                self.match(LuaParser.T__1)
                self.state = 118
                self.exp()
                self.state = 119
                self.match(LuaParser.T__12)
                self.state = 120
                self.exp()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==13:
                    self.state = 121
                    self.match(LuaParser.T__12)
                    self.state = 122
                    self.exp()


                self.state = 125
                self.match(LuaParser.T__2)
                self.state = 126
                self.block()
                self.state = 127
                self.match(LuaParser.T__3)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 129
                self.match(LuaParser.T__11)
                self.state = 130
                self.namelist()
                self.state = 131
                self.match(LuaParser.T__13)
                self.state = 132
                self.explist1()
                self.state = 133
                self.match(LuaParser.T__2)
                self.state = 134
                self.block()
                self.state = 135
                self.match(LuaParser.T__3)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 137
                self.match(LuaParser.T__14)
                self.state = 138
                self.funcname()
                self.state = 139
                self.funcbody()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 141
                self.match(LuaParser.T__15)
                self.state = 142
                self.match(LuaParser.T__14)
                self.state = 143
                self.match(LuaParser.NAME)
                self.state = 144
                self.funcbody()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 145
                self.match(LuaParser.T__15)
                self.state = 146
                self.namelist()
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==2:
                    self.state = 147
                    self.match(LuaParser.T__1)
                    self.state = 148
                    self.explist1()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LaststatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def explist1(self):
            return self.getTypedRuleContext(LuaParser.Explist1Context,0)


        def getRuleIndex(self):
            return LuaParser.RULE_laststat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLaststat" ):
                listener.enterLaststat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLaststat" ):
                listener.exitLaststat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLaststat" ):
                return visitor.visitLaststat(self)
            else:
                return visitor.visitChildren(self)




    def laststat(self):

        localctx = LuaParser.LaststatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_laststat)
        self._la = 0 # Token type
        try:
            self.state = 158
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.match(LuaParser.T__16)
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 71987230190632960) != 0):
                    self.state = 154
                    self.explist1()


                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.match(LuaParser.T__17)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncnameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(LuaParser.NAME)
            else:
                return self.getToken(LuaParser.NAME, i)

        def getRuleIndex(self):
            return LuaParser.RULE_funcname

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncname" ):
                listener.enterFuncname(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncname" ):
                listener.exitFuncname(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncname" ):
                return visitor.visitFuncname(self)
            else:
                return visitor.visitChildren(self)




    def funcname(self):

        localctx = LuaParser.FuncnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcname)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(LuaParser.NAME)
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19:
                self.state = 161
                self.match(LuaParser.T__18)
                self.state = 162
                self.match(LuaParser.NAME)
                self.state = 167
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 168
                self.match(LuaParser.T__19)
                self.state = 169
                self.match(LuaParser.NAME)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Varlist1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.VarContext)
            else:
                return self.getTypedRuleContext(LuaParser.VarContext,i)


        def getRuleIndex(self):
            return LuaParser.RULE_varlist1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarlist1" ):
                listener.enterVarlist1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarlist1" ):
                listener.exitVarlist1(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarlist1" ):
                return visitor.visitVarlist1(self)
            else:
                return visitor.visitChildren(self)




    def varlist1(self):

        localctx = LuaParser.Varlist1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varlist1)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.var()
            self.state = 177
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 173
                self.match(LuaParser.T__12)
                self.state = 174
                self.var()
                self.state = 179
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamelistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(LuaParser.NAME)
            else:
                return self.getToken(LuaParser.NAME, i)

        def getRuleIndex(self):
            return LuaParser.RULE_namelist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamelist" ):
                listener.enterNamelist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamelist" ):
                listener.exitNamelist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamelist" ):
                return visitor.visitNamelist(self)
            else:
                return visitor.visitChildren(self)




    def namelist(self):

        localctx = LuaParser.NamelistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_namelist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(LuaParser.NAME)
            self.state = 185
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 181
                    self.match(LuaParser.T__12)
                    self.state = 182
                    self.match(LuaParser.NAME) 
                self.state = 187
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Explist1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.ExpContext)
            else:
                return self.getTypedRuleContext(LuaParser.ExpContext,i)


        def getRuleIndex(self):
            return LuaParser.RULE_explist1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExplist1" ):
                listener.enterExplist1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExplist1" ):
                listener.exitExplist1(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExplist1" ):
                return visitor.visitExplist1(self)
            else:
                return visitor.visitChildren(self)




    def explist1(self):

        localctx = LuaParser.Explist1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_explist1)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 188
                    self.exp()
                    self.state = 189
                    self.match(LuaParser.T__12) 
                self.state = 195
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

            self.state = 196
            self.exp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(LuaParser.NumberContext,0)


        def string(self):
            return self.getTypedRuleContext(LuaParser.StringContext,0)


        def function(self):
            return self.getTypedRuleContext(LuaParser.FunctionContext,0)


        def prefixexp(self):
            return self.getTypedRuleContext(LuaParser.PrefixexpContext,0)


        def tableconstructor(self):
            return self.getTypedRuleContext(LuaParser.TableconstructorContext,0)


        def unop(self):
            return self.getTypedRuleContext(LuaParser.UnopContext,0)


        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.ExpContext)
            else:
                return self.getTypedRuleContext(LuaParser.ExpContext,i)


        def binop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.BinopContext)
            else:
                return self.getTypedRuleContext(LuaParser.BinopContext,i)


        def getRuleIndex(self):
            return LuaParser.RULE_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp" ):
                listener.enterExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp" ):
                listener.exitExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)




    def exp(self):

        localctx = LuaParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_exp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 210
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.state = 198
                self.match(LuaParser.T__20)
                pass
            elif token in [22]:
                self.state = 199
                self.match(LuaParser.T__21)
                pass
            elif token in [23]:
                self.state = 200
                self.match(LuaParser.T__22)
                pass
            elif token in [49, 50, 51, 52]:
                self.state = 201
                self.number()
                pass
            elif token in [53, 54, 55]:
                self.state = 202
                self.string()
                pass
            elif token in [24]:
                self.state = 203
                self.match(LuaParser.T__23)
                pass
            elif token in [15]:
                self.state = 204
                self.function()
                pass
            elif token in [25, 48]:
                self.state = 205
                self.prefixexp()
                pass
            elif token in [29]:
                self.state = 206
                self.tableconstructor()
                pass
            elif token in [32, 46, 47]:
                self.state = 207
                self.unop()
                self.state = 208
                self.exp()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 217
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,17,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 212
                    self.binop()
                    self.state = 213
                    self.exp() 
                self.state = 219
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,17,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)

        def exp(self):
            return self.getTypedRuleContext(LuaParser.ExpContext,0)


        def varSuffix(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.VarSuffixContext)
            else:
                return self.getTypedRuleContext(LuaParser.VarSuffixContext,i)


        def getRuleIndex(self):
            return LuaParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = LuaParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 226
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [48]:
                self.state = 220
                self.match(LuaParser.NAME)
                pass
            elif token in [25]:
                self.state = 221
                self.match(LuaParser.T__24)
                self.state = 222
                self.exp()
                self.state = 223
                self.match(LuaParser.T__25)
                self.state = 224
                self.varSuffix()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 231
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,19,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 228
                    self.varSuffix() 
                self.state = 233
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,19,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrefixexpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varOrExp(self):
            return self.getTypedRuleContext(LuaParser.VarOrExpContext,0)


        def nameAndArgs(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.NameAndArgsContext)
            else:
                return self.getTypedRuleContext(LuaParser.NameAndArgsContext,i)


        def functioncall(self):
            return self.getTypedRuleContext(LuaParser.FunctioncallContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_prefixexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrefixexp" ):
                listener.enterPrefixexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrefixexp" ):
                listener.exitPrefixexp(self)
